# algokit-python-template

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  copier.yaml  pyproject.toml
.github/workflows/: check-python.yaml  pr.yaml
examples/generators/production_puya_smart_contract_python/: .algokit.toml  .copier-answers.yml  README.md  pyproject.toml
examples/generators/production_puya_smart_contract_typescript/: .algokit.toml  .copier-answers.yml  README.md  pyproject.toml
examples/generators/production_python_smart_contract_python/: .algokit.toml  .copier-answers.yml  .pre-commit-config.yaml  README.md  (+1 more)
examples/generators/production_python_smart_contract_typescript/: .algokit.toml  README.md  package.json  pyproject.toml
examples/generators/production_python_smart_contract_typescript/.algokit/: .copier-answers.yml
examples/generators/production_python_smart_contract_typescript/.github/workflows/: production-python-smart-contract-typescript-cd.yaml  production-python-smart-contract-typescript-ci.yaml
examples/generators/production_python_smart_contract_typescript/smart_contracts/: __main__.py
examples/generators/production_python_smart_contract_typescript/smart_contracts/_helpers/: build.py
examples/generators/production_python_smart_contract_typescript/smart_contracts/cool_contract/: deploy-config.ts
examples/generators/production_python_smart_contract_typescript/smart_contracts/helpers/: build.py  util.py
examples/generators/production_python_smart_contract_typescript/tests/: hello-world.spec.ts
examples/generators/starter_python_smart_contract_typescript/: .algokit.toml  .copier-answers.yml  README.md  package.json  pyproject.toml
examples/generators/starter_python_smart_contract_typescript/smart_contracts/: __main__.py  config.py
examples/generators/starter_python_smart_contract_typescript/smart_contracts/_helpers/: build.py
examples/generators/starter_python_smart_contract_typescript/smart_contracts/cool_contract/: deploy-config.ts
examples/generators/starter_python_smart_contract_typescript/smart_contracts/hello_world/: contract.py
examples/generators/starter_python_smart_contract_typescript/smart_contracts/helpers/: build.py
examples/production_beaker/: .algokit.toml  README.md  pyproject.toml
examples/production_puya/: .algokit.toml  .copier-answers.yml  README.md  pyproject.toml
examples/production_python/: .algokit.toml  .copier-answers.yml  README.md  pyproject.toml
examples/starter_beaker/: .algokit.toml  README.md  pyproject.toml
examples/starter_puya/: .algokit.toml  .copier-answers.yml  README.md  pyproject.toml
examples/starter_python/: .algokit.toml  .copier-answers.yml  README.md  pyproject.toml
examples/starter_python/smart_contracts/: __main__.py
examples/starter_python/smart_contracts/_helpers/: build.py
template_content/: .algokit.toml.jinja  README.md.jinja  pyproject.toml.jinja  {% if deployment_language == 'typescript' or use_typescript_jest %}package.json{% endif %}.jinja  {% if use_pre_commit %}.pre-commit-config.yaml{% endif %}.jinja
template_content/smart_contracts/: __main__.py.jinja
template_content/{% if code_tours %}.tours{% endif %}/: getting-started-with-your-algokit-project.tour.jinja
template_content/{% if ide_vscode %}.tours{% endif %}/: getting-started-with-your-algokit-project.tour.jinja
template_content/{% if ide_vscode %}.vscode{% endif %}/: extensions.json.jinja  launch.json.jinja  settings.json.jinja
template_content/{% if use_python_pytest %}tests{% endif %}/: {% if use_python_pytest %}{{ contract_name }}_client_test.py{% endif %}.jinja  {% if use_python_pytest %}{{ contract_name }}_test.py{% endif %}.jinja
template_content/{% if use_typescript_jest %}tests{% endif %}/: {% if use_typescript_jest %}{% include pathjoin('includes', 'contract_name_kebab.jinja') %}.spec.ts{% endif %}.jinja
test_output/: README.md  test_output.code-workspace
test_output/.github/: release.yaml.template  validate.yaml.template
tests/: test_generators.py  test_templates.py
tests_generated/test_default_parameters/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_deployment_language-python/: README.md  pyproject.toml
tests_generated/test_deployment_language-typescript/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_ide_jetbrains-False/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_ide_jetbrains-True/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_preset_name-production/: README.md  pyproject.toml
tests_generated/test_preset_name-starter/: README.md  pyproject.toml
tests_generated/test_preset_name-starter/smart_contracts/helpers/: build.py
tests_generated/test_python_linter-ruff/: pyproject.toml
tests_generated/test_smart_contract_generator_default_production_preset_python/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_smart_contract_generator_default_production_preset_typescript/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_smart_contract_generator_default_starter_preset_python/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_smart_contract_generator_default_starter_preset_typescript/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_use_github_actions-False/: README.md  pyproject.toml
tests_generated/test_use_github_actions-True/: README.md  pyproject.toml
tests_generated/test_use_python_black-False/: README.md  pyproject.toml
tests_generated/test_use_python_black-True/: README.md  pyproject.toml
tests_generated/test_use_python_mypy-False/: README.md  pyproject.toml
tests_generated/test_use_python_mypy-True/: README.md  pyproject.toml
tests_generated/test_use_python_pytest-False/: README.md  pyproject.toml
tests_generated/test_use_python_pytest-True/: README.md  pyproject.toml
tests_generated/test_use_typescript_jest-False/: .copier-answers.yml  README.md  pyproject.toml
tests_generated/test_use_typescript_jest-True/: .copier-answers.yml  README.md  pyproject.toml
(+76 files in other folders)
