[tool.poetry]
name = "copier-testing-template"
version = "0.1.0"
description = ""
authors = ["MakerX <cto@makerx.com.au>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^3.0.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.2"
pytest = "^8.4.2"
mypy = "^1.18.2"
pre-commit = "^3.2.1"
types-pyyaml = "^6.0.12.9"
pytest-xdist = "^3.8.0"
pytest-sugar = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
  "E",
  "F",
  "ANN",
  "UP",
  "N",
  "C4",
  "B",
  "A",
  "YTT",
  "W",
  "FBT",
  "Q",
  "RUF",
  "I",
]
extend-exclude = [
  "examples/*",       # Ignoring generated tests, ruff specific errors are to be caught by pytest
  "template_content",
  ".git",
  ".mypy_cache",
  ".ruff_cache",
]
lint.ignore = [
  "RET505", # allow else after return
  "SIM108", # allow if-else in place of ternary
  "E111",   # indentation is not a multiple of four
  "E117",   # over-indented
  "ISC001", # single line implicit string concatenation
  "ISC002", # multi line implicit string concatenation
  "Q000",   # bad quotes inline string
  "Q001",   # bad quotes multiline string
  "Q002",   # bad quotes docstring
  "Q003",   # avoidable escaped quotes
  "W191",   # indentation contains tabs
]
lint.unfixable = ["B", "RUF"]

[tool.pytest.ini_options]
pythonpath = ["tests"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
