[tool.poetry]
name = "starter_python_smart_contract_typescript"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["None <None>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = { git = "https://github.com/algorandfoundation/algokit-utils-py.git", branch = "feat/puya-debugging" }
python-dotenv = "^1.0.0"
algorand-python = "^2.0.0"
algorand-python-testing = "^0.4.0"

[tool.poetry.group.dev.dependencies]
puyapy = { git = "https://github.com/algorandfoundation/puya.git", branch = "puya-debug-info" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

